--- a/views/edit.erb
+++ b/views/edit.erb
@@ -7,10 +7,10 @@
 <h1>Edit Post</h1>
 <form action="/posts/<%= @post.id %>" method="post">
 <input type="hidden" name="_method" value="patch">
-	<p><label for="title">Title: </label><input type="text" name="title" value="<%= @post.title %>" id="title" /></p>
-	<p><label for="author">Author: </label><input type="text" name="author" value="<%= @post.author %>" id="author" /></p>
-	<p><label for="date">Date: </label><input type="date" name="date" value="<%= @post.date %>" id="date" /></p>
-	<p><label for="body">Say it: </label><textarea name="body" value="<%= @post.body %>" id="body">Lorem ipsum</textarea></p>
+	<p><label for="title">Title: </label><input type="text" name="post[title]" value="<%= @post.title %>" id="title" /></p>
+	<p><label for="author">Author: </label><input type="text" name="post[author]" value="<%= @post.author %>" id="author" /></p>
+	<p><label for="date">Date: </label><input type="date" name="post[date]" value="<%= @post.date %>" id="date" /></p>
+	<p><label for="body">Say it: </label><textarea name="post[body]" value="<%= @post.body %>" id="body">Lorem ipsum</textarea></p>
 
 	<p><input type="submit" /></p>
 </form>
